Update all dependencies and restructure the authorization