@@ -4,10 +4,11 @@ import ch.uzh.ifi.access.course.model.Exercise;
 import ch.uzh.ifi.access.course.model.ExerciseType;
 import ch.uzh.ifi.access.student.model.SubmissionEvaluation;
 import ch.uzh.ifi.access.student.model.TextSubmission;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class TextEvaluatorTest {
 
@@ -15,7 +16,7 @@ public class TextEvaluatorTest {
     public void test() {
         Exercise ex = Exercise.builder()
                 .id("e1")
-                .solutions(Arrays.asList("Abz"))
+                .solutions(List.of("Abz"))
                 .maxScore(1)
                 .type(ExerciseType.text).build();
 
@@ -27,14 +28,14 @@ public class TextEvaluatorTest {
         TextEvaluator evaluator = new TextEvaluator();
         SubmissionEvaluation grade = evaluator.evaluate(sub, ex);
 
-        Assert.assertEquals(1.0, grade.getScore(), 0.25);
+        Assertions.assertEquals(1.0, grade.getScore(), 0.25);
     }
     
     @Test
     public void testZeroPoints() {
         Exercise ex = Exercise.builder()
                 .id("e1")
-                .solutions(Arrays.asList("Abz"))
+                .solutions(List.of("Abz"))
                 .maxScore(1)
                 .type(ExerciseType.text).build();
 
@@ -46,14 +47,14 @@ public class TextEvaluatorTest {
         TextEvaluator evaluator = new TextEvaluator();
         SubmissionEvaluation grade = evaluator.evaluate(sub, ex);
 
-        Assert.assertEquals(0.0, grade.getScore(), 0.25);
+        Assertions.assertEquals(0.0, grade.getScore(), 0.25);
     }
 
     @Test
     public void wrongAnswerShowsHint() {
         Exercise ex = Exercise.builder()
                 .id("e1")
-                .solutions(Arrays.asList("Abz"))
+                .solutions(List.of("Abz"))
                 .maxScore(1)
                 .hints(Arrays.asList("Hinweis 1", "Hinweis 2"))
                 .type(ExerciseType.text).build();
@@ -66,16 +67,16 @@ public class TextEvaluatorTest {
         TextEvaluator evaluator = new TextEvaluator();
         SubmissionEvaluation grade = evaluator.evaluate(sub, ex);
 
-        Assert.assertEquals(0.0, grade.getScore(), 0.25);
-        Assert.assertNotNull("Hints not empty", grade.getHints());
-        Assert.assertTrue("Contains a certain hint.", grade.getHints().contains("Hinweis 1"));
+        Assertions.assertEquals(0.0, grade.getScore(), 0.25);
+        Assertions.assertNotNull(grade.getHints());
+        Assertions.assertTrue(grade.getHints().contains("Hinweis 1"));
     }
 
     @Test
     public void exerciseHasNoHints() {
         Exercise ex = Exercise.builder()
                 .id("e1")
-                .solutions(Arrays.asList("Abz"))
+                .solutions(List.of("Abz"))
                 .maxScore(1)
                 .type(ExerciseType.text).build();
 
@@ -87,8 +88,8 @@ public class TextEvaluatorTest {
         TextEvaluator evaluator = new TextEvaluator();
         SubmissionEvaluation grade = evaluator.evaluate(sub, ex);
 
-        Assert.assertEquals(0.0, grade.getScore(), 0.25);
-        Assert.assertNull(grade.getHints());
+        Assertions.assertEquals(0.0, grade.getScore(), 0.25);
+        Assertions.assertNull(grade.getHints());
     }
 
 
